test: add and improve campaignControllerTest